# value

./: .gitignore  LICENSE  LICENSE_SHORT  Makefile  README.md  docker-compose.yml
.github/workflows/: python-sdk-ci.yml  python-sdk-publish.yml
examples/: README.md
examples/python/: README.md  basic_async.py  basic_sync.py  gemini_instrumentation.py  otel_basics.py  pipeline_simulation.py
seed-dummy-data/: .env.example  .gitignore  README.md  pyproject.toml
seed-dummy-data/data/: charge_model_types.json  charge_models.json  default_invoice_template.json
seed-dummy-data/seed_dummy_data/: __main__.py
seed-dummy-data/seed_dummy_data/utils/: clickhouse_seeder.py  config.py  control_plane_seeder.py  data_generators.py  seeded_data.py
src/api/services/: sync_runs.py
src/orchestrator/templates/: shopify_template.jinja
value-control-plane-backend/: .env  .env.example  README.md  docker-compose.yml
value-control-plane-backend/scripts/: init_db.sh
value-engine/: .env.example  README.md  docker-compose.yml
value-engine/configs/: clickhouse-config.xml  otel-collector-config.yaml
value-ui/: README.md  docker-compose.yml
